--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -147,6 +147,12 @@ article {
     }
 }
 
+@media screen and (max-width: 511px) {
+    section {
+        padding: 5px
+    }
+}
+
 @media screen and (max-width: 1200px) {
     main {
         flex-flow: column nowrap;
