--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -148,8 +148,8 @@ article {
 }
 
 @media screen and (max-width: 511px) {
-    section {
-        padding: 5px
+    aside {
+        margin: 5px
     }
 }
 
