--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -150,8 +150,8 @@ article {
 @media screen and (max-width: 511px) {
     aside {
         text-align: right;
-        margin: 5cm;
-        background-colour: white;
+        margin-right: 1cm;
+        margin-left: 1cm;
     }
 }
 
