--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -145,6 +145,9 @@ article {
     footer {
         width: 129%;
     }
+    aside {
+        overflow: hidden;
+    }
 }
 
 @media screen and (max-width: 1200px) {
