--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -7,6 +7,7 @@ body {
     font-family: 'Open-Sans', 'sans-serif';
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 }
 
 header {
